<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="90dp"
    android:layout_marginStart="25dp"
    android:layout_marginEnd="25dp"
    android:layout_marginBottom="90dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp"
    tools:context=".view.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/currency_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_edit_text"
            android:fontFamily="@font/nunito_sans_bold"
            android:hint="@string/editText_hint"
            android:inputType="number"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/convert_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/convert_button_string"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currency_editText" />

        <RelativeLayout
            android:id="@+id/currenciesRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/convert_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="25dp"
            android:paddingEnd="0dp">

            <TextView
                android:id="@+id/date_info_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/date_info_string"
                android:textAlignment="center"
                android:textColor="#FF9A00"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/usd_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/date_info_textView"
                android:layout_marginTop="25dp"
                android:text="@string/usd_value_string"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#FFC100"
                android:fontFamily="@font/nunito_sans_semibold"/>

            <TextView
                android:id="@+id/gbp_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/usd_textView"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/nunito_sans_semibold"
                android:text="@string/gbp_value_string"
                android:textColor="#FFC100"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/eur_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/gbp_textView"
                android:layout_marginTop="3dp"
                android:text="@string/eur_value_string"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#FFC100"
                android:fontFamily="@font/nunito_sans_semibold"/>

            <TextView
                android:id="@+id/chf_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/eur_textView"
                android:layout_marginTop="3dp"
                android:text="@string/chf_value_string"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#FFC100"
                android:fontFamily="@font/nunito_sans_semibold"/>

            <TextView
                android:id="@+id/sek_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/chf_textView"
                android:layout_marginTop="3dp"
                android:text="@string/sek_value_string"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#FFC100"
                android:fontFamily="@font/nunito_sans_semibold"/>

            <TextView
                android:id="@+id/cad_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sek_textView"
                android:layout_marginTop="3dp"
                android:text="@string/cad_value_string"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#FFC100"
                android:fontFamily="@font/nunito_sans_semibold"/>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>